# global_name_db

./: .gitignore  CMakeLists.txt  LICENSE-3RD-PARTY.md  README.md
include/global_db/: global_db.h
script/: doxygen.cmake  odslib.cmake  utillib.cmake  workflowlib.cmake  wxwidgets.cmake
src/: global_db.cpp
